# wasm-micro-runtime

core/iwasm/libraries/lib-socket/inc/: wasi_socket_ext.h
core/iwasm/libraries/lib-socket/src/wasi/: wasi_socket_ext.c
samples/socket-api/: CMakeLists.txt
samples/socket-api/wasm-src/: CMakeLists.txt  curl_example.c
